# SirEngineThe3rd

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SirEngineThe3rd.sln  ciSetup.ps1  session_form.py  vk_layer_settings.txt
Editor/: CMakeLists.txt  (+2 more)
ModelCompilerPlugin/: CMakeLists.txt  modelCompilerPlugin.cpp  modelCompilerPlugin.h  processObj.cpp  processObj.h
ResourceCompiler/: CMakeLists.txt  main.cpp  pointsTiler.py
ResourceCompiler/mayaExporter/: Doxyfile  json_utils.py  reload_master.py  session.py
ResourceCompiler/mayaExporter/actions/: action.py  exportAnimAction.py  exportModelAction.py  exportSkeletonAction.py  exportSkinAction.py  loadPluginAction.py  openFileAction.py  reload_actions.py  runPyAction.py  runPyFileAction.py  runSystemAction.py
ResourceCompiler/mayaExporter/ui/: actionUi.py  exportAnimActionUi.py  exportModelActionUi.py  exportSkeletonActionUi.py  exportSkinActionUi.py  fileActionUi.py  reload_ui.py  runPyActionUi.py  runPyFileActionUi.py  runSystemActionUi.py  sessionUi.py
ResourceCompiler/mayaExporter/ui/helperWidgets/: __init__.py  keywordWidget.py  pathWidget.py  reload_helper_widgets.py  spinWidget.py
ResourceCompiler/mayaExporter/ui/resources/: darkorange.stylesheet
ResourceCompiler/mayaExporter/ui/workFile/: actionUi.ui  action_form.py  masterReload_rc.py  pathUi.ui  path_form.py  reload_work_file.py  sessionUi.ui  session_form.py  spin_widget_form.py
ResourceCompiler/mayaExporter/workers/: animationExporter.py  meshExporter.py  reload_workers.py  skeletonExporter.py
ResourceCompiler/mayaExporters/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ResourceCompiler.sln  ResourceCompiler.vcxproj  ResourceCompiler.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  animationExporter.py  cmake_install.cmake  meshExporter.py  modelExporter.txt  skinclusterExporter.py
ResourceCompilerLib/: CMakeLists.txt
ResourceCompilerLib/resourceCompilerLib/: argsUtils.h  core.h  fileUtils.h  resourcePlugin.cpp  resourcePlugin.h
ResourceCompilerLib/src/resourceCompilerLib/: argsUtils.h  core.h  jsonUtils.h  resourcePlugin.cpp  resourcePlugin.h
ResourceCompilerPlugins/PSOCompilerPlugin/: CMakeLists.txt  PSOCompilerPlugin.cpp  PSOProcess.cpp  PSOProcess.h
ResourceCompilerPlugins/ShaderCompilerPlugin/: CMakeLists.txt  shaderCompilerPlugin.cpp  shaderCompilerPlugin.h
ResourceCompilerPlugins/TextureCompilerPlugin/: CMakeLists.txt  DDS_Helpers.cpp  DDS_Helpers.h  processTexture.cpp  processTexture.h  textureCompilerPlugin.cpp  textureCompilerPlugin.h
ResourceCompilerPlugins/VkShaderCompilerPlugin/: CMakeLists.txt  vkShaderCompilerPlugin.cpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/src/: sandboxApp.cpp
Sandbox/src/layers/: editorLayer.cpp
SirEngineThe3rdLib/: CMakeLists.txt  SirEngineThe3rd.vcxproj.filters
SirEngineThe3rdLib/src/: SirEngine.h
SirEngineThe3rdLib/src/SirEngine/: Log.cpp  Window.h  application.cpp  application.h  argsUtils.h  assetManager.cpp  assetManager.h  bufferManager.h  clock.h  constantBufferManager.h  core.h  engineConfig.cpp  engineConfig.h  engineMath.cpp  engineMath.h  entryPoint.h  fileUtils.cpp  fileUtils.h  flags.h  globals.cpp  globals.h  handle.h  hashing.h  headlessClient.cpp  headlessClient.h  identityManager.cpp  identityManager.h  input.h  interopData.h  layer.h  layerStack.cpp  layerStack.h  log.h  materialManager.cpp  materialManager.h  matrix.cpp  matrix.h  meshManager.h  psoManager.h  rootSignatureManager.h  (+4 more)
SirEngineThe3rdLib/src/SirEngine/animation/: animationClip.cpp  animationClip.h  animationLoopPlayer.cpp  animationLoopPlayer.h  animationManager.cpp  animationManager.h  animationManipulation.cpp  animationManipulation.h  animationPlayer.h  animation_manager.cpp  animation_manager.h  luaStatePlayer.cpp  luaStatePlayer.h  skeleton.cpp  skeleton.h
SirEngineThe3rdLib/src/SirEngine/binary/: binaryFile.cpp  binaryFile.h
SirEngineThe3rdLib/src/SirEngine/debugUiWidgets/: frameTimingsWidget.cpp  frameTimingsWidget.h  grassConfigWidget.cpp  grassConfigWidget.h  hardwareInfo.cpp  hardwareInfo.h  memoryConsumptionWidget.cpp  memoryConsumptionWidget.h  memoryPoolTrackerWidget.cpp  memoryPoolTrackerWidget.h  renderGraphWidget.cpp  renderGraphWidget.h  shaderRecompileWidget.cpp  shaderRecompileWidget.h
SirEngineThe3rdLib/src/SirEngine/ecs/: constexprHash.h  ecs.h
SirEngineThe3rdLib/src/SirEngine/events/: applicationEvent.h  debugEvent.h  event.h  keyboardEvent.h  mouseEvent.h  renderGraphEvent.h  scriptingEvent.h  shaderCompileEvent.h
SirEngineThe3rdLib/src/SirEngine/graphics/: bindingTableManager.h  camera.cpp  camera.h  commandBufferManager.h  cpuGraphicsStructures.h  debugAnnotations.h  debugRenderer.cpp  debugRenderer.h  graphicsCore.cpp  graphicsCore.h  graphicsDefines.h  lightManager.cpp  lightManager.h  materialMetadata.cpp  materialMetadata.h  nodeGraph.cpp  nodeGraph.h  renderGraphContext.h  renderingContext.cpp  renderingContext.h  shaderManager.h
Tests/: CMakeLists.txt
Tests/src/: animationTest.cpp  argsCompilerTests.cpp  ecsTests.cpp  graphNodesDefinitions.h  graphTests.cpp  hashMapTests.cpp  linearBufferTrackerTests.cpp  main.cpp  materialMetadataTests.cpp  memoryPoolTests.cpp  overridingRingBufferTests.cpp  randomSizeAllocatorTests.cpp  renderGraphTests.cpp  resizableVectorTests.cpp  ringBufferTests.cpp  scriptingTest.cpp  statAllocatorTests.cpp  stringPoolAllocatorTests.cpp  treeSizesAllocatorTests.cpp
Tests/testData/: fileLoad1.txt  idle1.json  idle1Config.json  idle2.json  knightBIdle.json  knightBWalk.json  mannequin.json  noMetaAnim.json  registerTest2.lua
Tools/pointScatter/cpp/: CMakeLists.txt  main.cpp
Tools/resourceProcessing/: CMakeLists.txt
Tools/resourceProcessing/includes/: modelCompilerPlugin.h
vendors/: CMakeLists.txt  CMakeListsOld.txt
vendors/SirEngineThe3rdLib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  SirEngineThe3rdLib.sln  SirEngineThe3rdLib.vcxproj  SirEngineThe3rdLib.vcxproj.filters  cmake_install.cmake
vendors/vendors/: cmake_install.cmake
(+958 files in other folders)
